--- a/hibernate/pom.xml
+++ b/hibernate/pom.xml
@@ -8,76 +8,78 @@
   <packaging>jar</packaging>
      <name>hibernate</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
-   <dependency>
-   
- <groupId>junit</groupId>
-  <artifactId>junit</artifactId>
-  <version>4.12</version>
-  <scope>test</scope>
-</dependency>
-   
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
-<dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-core</artifactId>
-    <version>4.3.10.RELEASE</version>
+    <version>4.3.7.RELEASE</version>
 </dependency>
-    <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-context</artifactId>
-    <version>4.3.10.RELEASE</version>
+    <version>4.3.7.RELEASE</version>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
+
+ 
 <dependency>
     <groupId>org.springframework</groupId>
-    <artifactId>spring-web</artifactId>
-    <version>4.3.10.RELEASE</version>
+    <artifactId>spring-orm</artifactId>
+    <version>4.3.7.RELEASE</version>
 </dependency>
-<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>4.3.10.RELEASE</version>
-		</dependency>
-<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>4.3.7.RELEASE</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-beans -->
+
 <dependency>
     <groupId>org.springframework</groupId>
     <artifactId>spring-beans</artifactId>
     <version>4.3.10.RELEASE</version>
 </dependency>
-		
-		
-    <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+
 <dependency>
     <groupId>com.h2database</groupId>
     <artifactId>h2</artifactId>
-    <version>1.4.196</version>
+    <version>1.4.195</version>
     <scope>test</scope>
 </dependency>
-		
-
 <dependency>
     <groupId>org.hibernate</groupId>
     <artifactId>hibernate-core</artifactId>
     <version>5.2.10.Final</version>
 </dependency>
 <dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-dbcp2</artifactId>
-			<version>2.1.1</version>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>5.2.4.Final</version>
+</dependency>
+<dependency>
+   <groupId>javax.el</groupId>
+   <artifactId>javax.el-api</artifactId>
+   <version>2.2.4</version>
+</dependency>
+<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.2.2</version>
 		</dependency>
-    
-  </dependencies>
-</project>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-dbcp2</artifactId>
+    <version>2.1.1</version>
+</dependency>
+</dependencies>
+</project>  
